// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Successful post queries can get feed with published posts 1`] = `
Array [
  Object {
    "authorId": 1,
    "content": "https://graphqlweekly.com/",
    "id": 2,
    "published": true,
    "title": "Subscribe to GraphQL Weekly for community news ",
  },
]
`;

exports[`Successful post queries can get filtered posts with valid search string 1`] = `
Array [
  Object {
    "authorId": 1,
    "content": "https://graphqlweekly.com/",
    "id": 2,
    "published": true,
    "title": "Subscribe to GraphQL Weekly for community news ",
  },
]
`;

exports[`Successful post queries can get post with valid id 1`] = `
Object {
  "authorId": 1,
  "content": "https://graphqlweekly.com/",
  "id": 2,
  "published": true,
  "title": "Subscribe to GraphQL Weekly for community news ",
}
`;
